--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </li>
 
         <li>
-          <a href="" target="_blank">Ver meu portfólio</a>
+          <a href="https://github.com/Fernandafmsf" target="_blank">Ver meu portfólio</a>
         </li>
 
         <li>
@@ -45,7 +45,7 @@
         </li>
 
         <li>
-          <a href="https://Rocketseat" target="_blank">Conheça a Rocketseat</a>
+          <a href="https://rocketseat.com.br" target="_blank">Conheça a Rocketseat</a>
         </li>
         <!-- target blank faz abrir o link sem sair sair do seu site-->
       </ul>
@@ -54,7 +54,7 @@
         <a href="https://github.com/Fernandafmsf" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="https://" target="_blank">
+        <a href="https://instagram.com/fernandfmsf?igshid=ZDdkNTZiNTM=" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
          <a href="https://www.youtube.com/" target="_blank">
